--- a/main.tex
+++ b/main.tex
@@ -1,1 +1,77 @@
+\documentclass[12pt,a4paper]{report}
+\setlength{\headheight}{15pt}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[italian]{babel}
+\usepackage{graphicx}
+\usepackage{hyperref}
+\usepackage{amsmath}
+\usepackage{booktabs}
+\usepackage{lipsum}
+\usepackage{fancyhdr}
+\setlength{\headheight}{27pt}
+\usepackage[backend=biber,style=authoryear]{biblatex}
+\usepackage{csquotes}
+\addbibresource{bibliografia.bib}
 
+% Margini
+\usepackage{geometry}
+\geometry{a4paper, top=3cm, bottom=3cm, left=2.5cm, right=2.5cm}
+
+% Header/Footer
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{\thepage}
+\lhead{\leftmark}
+
+% Impostazioni corpo testo e citazioni
+\renewcommand{\normalsize}{\fontsize{12pt}{14pt}\selectfont}
+\renewcommand{\footnotesize}{\fontsize{10pt}{12pt}\selectfont}
+\renewenvironment{quote}{\list{}{\rightmargin=1cm \leftmargin=1cm}\item\relax\fontsize{11pt}{13pt}\selectfont}{\endlist}
+
+\setcounter{secnumdepth}{3}
+
+\begin{document}
+
+% Frontespizio
+\begin{titlepage}
+    \begin{center}
+        \textsc{\LARGE Universit\`a degli Studi eCampus} \\
+        \vspace{0.5cm}
+        \textsc{\Large Tesi di Laurea} \\
+        \vspace{1.5cm}
+
+        {\Huge \textbf{Domotica Residenziale}} \\
+        \vspace{0.5cm}
+        {\Large \textbf{Evoluzione dei Protocolli di Comunicazione IoT e}} \\
+        \vspace{0.2cm}
+        {\Large \textbf{Gestione di Dispositivi Multimarca}} \\
+
+        \vfill
+        \begin{flushleft}
+            \textbf{Relatore:} Prof. Christian Callegari \\
+            \textbf{Candidato:} Michele Rota Biasetti \\
+            Matricola n\textsuperscript{o} 1518870
+        \end{flushleft}
+
+        \vfill
+        Anno accademico 2024/2025
+    \end{center}
+\end{titlepage}
+
+% Indice
+\tableofcontents
+\newpage
+
+% Capitolo 1: Introduzione
+\include{capitoli/cap1}
+\include{capitoli/cap2}
+\include{capitoli/cap3}
+\include{capitoli/cap4}
+\include{capitoli/cap5}
+\include{capitoli/cap6}
+\include{capitoli/cap7}
+\include{capitoli/cap8}
+\include{capitoli/cap9}
+\include{glossario}
+\include{appendice}
