--- a/capitoli/cap6.tex
+++ b/capitoli/cap6.tex
@@ -1,24 +1,24 @@
 \chapter{Prospettive Future nella Domotica Residenziale}
 \section{Il ruolo dello standard Matter e dei protocolli basati su IP}
-Matter rappresenta una svolta nel panorama della domotica residenziale: è uno standard aperto sviluppato dalla Connectivity Standards Alliance (CSA) per garantire l’interoperabilità tra dispositivi di produttori diversi. Basato su protocolli IP, Matter consente una comunicazione sicura ed efficiente tra dispositivi domestici smart, eliminando molte delle barriere imposte dai sistemi proprietari. L’adozione su larga scala di Matter potrebbe uniformare il mercato e semplificare le configurazioni per l’utente finale \parencite{matterCSA}.
+Matter rappresenta una svolta nel panorama della domotica residenziale: è uno standard aperto sviluppato dalla Connectivity Standards Alliance (CSA) per garantire l'interoperabilità tra dispositivi di produttori diversi. Basato su protocolli IP, Matter consente una comunicazione sicura ed efficiente tra dispositivi domestici smart, eliminando molte delle barriere imposte dai sistemi proprietari. L'adozione su larga scala di Matter potrebbe uniformare il mercato e semplificare le configurazioni per l'utente finale \parencite{matterCSA}.
 
 \section{Sviluppi tecnologici emergenti}
 
 \subsection{Intelligenza artificiale e apprendimento automatico nella smart home}
-L’integrazione dell’intelligenza artificiale (IA) nelle smart home è destinata a rivoluzionare l’automazione domestica. Sistemi basati su IA sono in grado di apprendere le abitudini dell’utente, anticiparne i bisogni e adattare dinamicamente le automazioni in funzione dei comportamenti rilevati. Questo approccio incrementa l’efficienza energetica, la personalizzazione e la sicurezza dei sistemi domotici \parencite{ieeeAI}.
+L'integrazione dell'intelligenza artificiale (IA) nelle smart home è destinata a rivoluzionare l'automazione domestica. Sistemi basati su IA sono in grado di apprendere le abitudini dell'utente, anticiparne i bisogni e adattare dinamicamente le automazioni in funzione dei comportamenti rilevati. Questo approccio incrementa l'efficienza energetica, la personalizzazione e la sicurezza dei sistemi domotici \parencite{ieeeAI}.
 
 \subsection{Reti mesh e Wi-Fi 6}
-Le reti mesh rappresentano una soluzione sempre più diffusa per migliorare la copertura e l’affidabilità delle comunicazioni wireless in ambito domestico. In parallelo, la diffusione del Wi-Fi 6 porta significativi miglioramenti in termini di velocità, efficienza e capacità di gestire un elevato numero di dispositivi contemporaneamente, rendendolo particolarmente adatto a contesti smart home complessi \parencite{etsiWifi6}.
+Le reti mesh rappresentano una soluzione sempre più diffusa per migliorare la copertura e l'affidabilità delle comunicazioni wireless in ambito domestico. In parallelo, la diffusione del Wi-Fi 6 porta significativi miglioramenti in termini di velocità, efficienza e capacità di gestire un elevato numero di dispositivi contemporaneamente, rendendolo particolarmente adatto a contesti smart home complessi \parencite{etsiWifi6}.
 
 \section{Sfide legate alla privacy e alla sicurezza}
-Con l’aumento dei dispositivi connessi cresce anche il rischio legato alla sicurezza informatica. I sistemi domotici sono potenziali bersagli di attacchi hacker e possono comportare violazioni della privacy. Tra le principali criticità si evidenziano:
+Con l'aumento dei dispositivi connessi cresce anche il rischio legato alla sicurezza informatica. I sistemi domotici sono potenziali bersagli di attacchi hacker e possono comportare violazioni della privacy. Tra le principali criticità si evidenziano:
 \begin{itemize}
     \item trasmissione non cifrata di dati sensibili;
     \item vulnerabilità nei firmware dei dispositivi;
     \item accessi non autorizzati tramite reti domestiche compromesse.
 \end{itemize}
 
-Per affrontare tali sfide, sono fondamentali l’adozione di protocolli sicuri, aggiornamenti software regolari, e la consapevolezza dell’utente riguardo le buone pratiche di cybersicurezza \parencite{nistIotSecurity}.
+Per affrontare tali sfide, sono fondamentali l'adozione di protocolli sicuri, aggiornamenti software regolari, e la consapevolezza dell'utente riguardo le buone pratiche di cybersicurezza \parencite{nistIotSecurity}.
 
 
 % Capitolo 7: Conclusioni
