--- a/capitoli/cap7.tex
+++ b/capitoli/cap7.tex
@@ -1,18 +1,18 @@
 \chapter{Conclusioni}
-\section{Riflessioni sull’evoluzione della domotica residenziale}
-La domotica residenziale ha conosciuto una rapida evoluzione, favorita dalla diffusione delle tecnologie dell’Internet of Things (IoT), che ha reso possibile l’automazione intelligente di molteplici aspetti della vita quotidiana. Dalla semplice accensione remota delle luci si è giunti a sistemi complessi in grado di apprendere le abitudini degli utenti e di adattarsi dinamicamente alle condizioni ambientali e comportamentali.
+\section{Riflessioni sull'evoluzione della domotica residenziale}
+La domotica residenziale ha conosciuto una rapida evoluzione, favorita dalla diffusione delle tecnologie dell'Internet of Things (IoT), che ha reso possibile l'automazione intelligente di molteplici aspetti della vita quotidiana. Dalla semplice accensione remota delle luci si è giunti a sistemi complessi in grado di apprendere le abitudini degli utenti e di adattarsi dinamicamente alle condizioni ambientali e comportamentali.
 
-L’analisi condotta ha evidenziato come lo sviluppo e la diffusione dei protocolli di comunicazione abbiano rappresentato un fattore critico nel garantire l’efficienza e la scalabilità dei sistemi domotici. In particolare, il passaggio da protocolli proprietari a standard aperti come Zigbee, Thread e, più recentemente, Matter, ha aperto nuove possibilità per l’interoperabilità tra dispositivi multimarca.
+L'analisi condotta ha evidenziato come lo sviluppo e la diffusione dei protocolli di comunicazione abbiano rappresentato un fattore critico nel garantire l'efficienza e la scalabilità dei sistemi domotici. In particolare, il passaggio da protocolli proprietari a standard aperti come Zigbee, Thread e, più recentemente, Matter, ha aperto nuove possibilità per l'interoperabilità tra dispositivi multimarca.
 
-\section{Impatti dell’interoperabilità sulla diffusione delle smart home}
-La questione dell’interoperabilità è risultata centrale nell’adozione della domotica su larga scala. L’integrazione tra dispositivi di produttori diversi rappresenta una delle sfide principali per la creazione di un ecosistema realmente connesso. L’affermarsi di standard aperti come Matter e l’impegno di grandi attori industriali (Apple, Google, Amazon) nel supportare questi standard hanno segnato un punto di svolta.
+\section{Impatti dell'interoperabilità sulla diffusione delle smart home}
+La questione dell'interoperabilità è risultata centrale nell'adozione della domotica su larga scala. L'integrazione tra dispositivi di produttori diversi rappresenta una delle sfide principali per la creazione di un ecosistema realmente connesso. L'affermarsi di standard aperti come Matter e l'impegno di grandi attori industriali (Apple, Google, Amazon) nel supportare questi standard hanno segnato un punto di svolta.
 
-D’altra parte, la presenza di piattaforme proprietarie ha contribuito a sviluppare soluzioni user-friendly, pur mantenendo talvolta limitazioni in termini di compatibilità. Le prospettive future delineano un’ulteriore convergenza tra questi due mondi, supportata da evoluzioni tecnologiche come il Wi-Fi 6, l’intelligenza artificiale applicata alla smart home e le reti mesh.
+D'altra parte, la presenza di piattaforme proprietarie ha contribuito a sviluppare soluzioni user-friendly, pur mantenendo talvolta limitazioni in termini di compatibilità. Le prospettive future delineano un'ulteriore convergenza tra questi due mondi, supportata da evoluzioni tecnologiche come il Wi-Fi 6, l'intelligenza artificiale applicata alla smart home e le reti mesh.
 
 \section{Considerazioni finali}
-L’esempio pratico basato su Apple HomeKit ha dimostrato come, già oggi, sia possibile implementare un impianto domotico efficiente, scalabile e relativamente semplice da gestire, sfruttando dispositivi di produttori diversi. Ciò conferma l’importanza di una progettazione orientata alla compatibilità e di un’attenta selezione degli standard di comunicazione.
+L'esempio pratico basato su Apple HomeKit ha dimostrato come, già oggi, sia possibile implementare un impianto domotico efficiente, scalabile e relativamente semplice da gestire, sfruttando dispositivi di produttori diversi. Ciò conferma l'importanza di una progettazione orientata alla compatibilità e di un'attenta selezione degli standard di comunicazione.
 
-In conclusione, la domotica residenziale si configura come uno degli ambiti più promettenti dell’IoT. Perché tale potenziale possa realizzarsi pienamente, sarà tuttavia necessario continuare a lavorare su interoperabilità, sicurezza e tutela della privacy. Solo così sarà possibile favorire una diffusione capillare e sostenibile delle smart home.
+In conclusione, la domotica residenziale si configura come uno degli ambiti più promettenti dell'IoT. Perché tale potenziale possa realizzarsi pienamente, sarà tuttavia necessario continuare a lavorare su interoperabilità, sicurezza e tutela della privacy. Solo così sarà possibile favorire una diffusione capillare e sostenibile delle smart home.
 
 % Bibliografia
 \printbibliography[title={Bibliografia}]
