--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \setlength{\headheight}{27pt}
 \usepackage[backend=biber,style=authoryear]{biblatex}
 \usepackage{csquotes}
-\addbibresource{bibliografia.bib}
+\addbibresource{bibliography.bib}
 
 % Margini
 \usepackage{geometry}
