--- a/capitoli/cap9.tex
+++ b/capitoli/cap9.tex
@@ -26,7 +26,7 @@
 \section*{Schermata di esempio}
 \begin{figure}[h!]
     \centering
-    \includegraphics[scale=0.13]{esempio-homekit.png}
+    \includegraphics[scale=0.13]{immagini/esempio-homekit.jpeg}
     \caption{Interfaccia Apple Home con dispositivi configurati}
     \label{fig:homekit-interface}
 \end{figure}
