Remove duplicate appendice

--- a/main.tex
+++ b/main.tex
@@ -72,6 +72,5 @@
 \include{capitoli/cap6}
 \include{capitoli/cap7}
 \include{capitoli/cap8}
-\include{capitoli/cap9}
+\include{capitoli/appendice}
 \include{glossario}
-\include{appendice}
