--- a/main.tex
+++ b/main.tex
@@ -71,8 +71,7 @@
 \include{capitoli/cap5}
 \include{capitoli/cap6}
 \include{capitoli/cap7}
-\include{capitoli/cap8}
-\include{capitoli/cap9}
+\appendix
 \include{glossario}
 \include{appendice}
 \printbibliography
