nuova vwrsione di test

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -105,3 +105,35 @@
   note = {Accesso il 10 aprile 2025},
   url = {https://csrc.nist.gov/publications/detail/sp/800-213/final}
 }
+
+@online{matterAlliance,
+  author = {Connectivity Standards Alliance},
+  title = {Matter},
+  year = {2023},
+  url = {https://csa-iot.org/all-solutions/matter/},
+  urldate = {2025-07-08},
+}
+
+@online{csaMatter,
+  author = {Connectivity Standards Alliance},
+  title = {Connectivity Standards Alliance - Matter Protocol},
+  year = {2023},
+  url = {https://csa-iot.org/matter/},
+  urldate = {2025-07-08},
+}
+
+@online{nistIoTSecurity,
+  author = {National Institute of Standards and Technology},
+  title = {IoT Security Guidelines},
+  year = {2022},
+  url = {https://www.nist.gov/itl/applied-cybersecurity/nist-iot-security},
+  urldate = {2025-07-08},
+}
+
+@online{iecSmartHome,
+  author = {International Electrotechnical Commission},
+  title = {Smart Home},
+  year = {2023},
+  url = {https://www.iec.ch/smart-home},
+  urldate = {2025-07-08},
+}
