--- a/capitoli/cap1.tex
+++ b/capitoli/cap1.tex
@@ -1,18 +1,23 @@
+
 \chapter{Introduzione}
-Negli ultimi anni, le tecnologie legate all'Internet of Things, o IoT, hanno fatto davvero tanta strada. Oggi si trovano praticamente ovunque e hanno cambiato il modo in cui viviamo la casa. Non si parla più solo di pareti e mobili: l'abitazione diventa un ambiente intelligente, connesso, capace di adattarsi ai bisogni quotidiani di chi la abita. La domotica, in questo senso, è forse l'esempio più evidente e concreto dell'IoT applicato alla vita di tutti i giorni: ci aiuta a risparmiare energia, ci fa sentire più sicuri e rende l'esperienza domestica più comoda.
-\vspace{0.5cm}
-Naturalmente, non è tutto perfetto. Man mano che la tecnologia è diventata più presente nelle case, sono emersi anche alcuni problemi. Uno tra i più sentiti riguarda la comunicazione tra dispositivi di marche diverse. Capita spesso, ad esempio, di acquistare un nuovo sensore o un assistente vocale e accorgersi che non ``parla'' con gli altri dispositivi già installati. Il motivo? Ogni produttore tende a usare protocolli di comunicazione propri, spesso incompatibili tra loro. E qui entra in gioco l'importanza dei cosiddetti standard aperti. Uno su tutti: Matter, un protocollo recente nato proprio per risolvere questi problemi e semplificare l'interoperabilità tra dispositivi.
+Negli ultimi anni, le tecnologie legate all'Internet of Things (IoT) hanno trasformato profondamente il nostro modo di vivere, con un impatto particolarmente significativo sulla dimensione domestica. Oggi la casa non è più soltanto uno spazio fisico composto da mura e oggetti statici, ma un ambiente intelligente, connesso, capace di adattarsi dinamicamente alle esigenze degli abitanti grazie alla domotica. Quest'ultima rappresenta uno degli esempi più concreti e tangibili dell'applicazione dell'IoT nella vita quotidiana, migliorando il comfort abitativo, incrementando la sicurezza e favorendo il risparmio energetico.
 
 \vspace{0.5cm}
-Questa tesi nasce con l'idea di fare un po' di chiarezza su tutto questo. L'obiettivo è analizzare in modo approfondito l'evoluzione dei protocolli di comunicazione utilizzati nella domotica residenziale, soffermandosi soprattutto su come si possano gestire insieme, in modo efficace, dispositivi di marche diverse. Per rendere tutto più concreto, sarà presentato anche un esempio pratico: un sistema domotico basato su Apple HomeKit, che mostra come creare una configurazione moderna, scalabile e, soprattutto, interoperabile.
+Nonostante questi notevoli vantaggi, l'espansione della domotica ha anche evidenziato criticità non trascurabili. Tra queste, la sfida più rilevante è quella dell'interoperabilità tra dispositivi prodotti da aziende differenti. È frequente, infatti, acquistare nuovi dispositivi intelligenti e scoprire che non riescono a comunicare efficacemente con quelli già presenti in casa. La radice di questo problema risiede principalmente nella varietà di protocolli di comunicazione proprietari adottati dai diversi produttori, che limitano l'integrazione e la scalabilità delle soluzioni domotiche \parencite{matterAlliance}.
+
+\vspace{0.5cm}
+In risposta a questa situazione, negli ultimi anni si sono affermati nuovi standard aperti, come il protocollo Matter, sviluppato con l'obiettivo esplicito di facilitare l'interoperabilità tra dispositivi multimarca, basandosi su tecnologie IP (Internet Protocol) comuni \parencite{csaMatter}. Tuttavia, oltre all'interoperabilità, esistono altre dimensioni fondamentali come la sicurezza, la privacy e l'affidabilità, che determinano la reale efficacia e sostenibilità delle soluzioni IoT domestiche.
+
+Questa tesi si propone quindi di esplorare approfonditamente l'evoluzione dei protocolli di comunicazione IoT adottati nell'ambito della domotica residenziale, affrontando in modo particolare i temi della sicurezza, delle prestazioni e della gestione efficace di dispositivi multimarca. Al fine di rendere l'analisi ancora più concreta e operativa, sarà presentato un caso pratico di sistema domotico basato sull'ecosistema Apple HomeKit, selezionato per la sua capacità di garantire un buon equilibrio tra facilità di uso, interoperabilità e sicurezza.
 
 \section{Obiettivi della ricerca}
-Il cuore di questo lavoro è capire come funzionano i protocolli di comunicazione usati nei sistemi domotici e quale ruolo abbiano nel garantire che dispositivi diversi riescano a collaborare tra loro. Più nello specifico, ci si propone di:
+Questo lavoro ha come obiettivo principale analizzare in modo approfondito i protocolli IoT utilizzati nella domotica residenziale, evidenziando come la loro evoluzione stia influenzando la capacità dei sistemi domestici intelligenti di gestire in modo integrato dispositivi diversi. In particolare, gli obiettivi specifici di questa ricerca sono:
 \begin{itemize}
-	 \item  Ripercorrere l'evoluzione dei principali protocolli IoT impiegati nell'ambito domestico, con uno sguardo alla loro origine e ai contesti in cui si sono affermati;
-	 \item Confrontare le soluzioni attualmente disponibili, evidenziando i punti di forza e le criticità di ciascuna;
-	 \item Capire quali sono le strade percorribili per mettere insieme dispositivi di marche diverse in un unico ecosistema funzionante;
-	 \item Mostrare un caso concreto tramite la configurazione di un sistema domotico basato su Apple HomeKit, per osservare come funziona nella pratica l'integrazione di più tecnologie.
+\item Ripercorrere l'evoluzione storica e tecnologica dei principali protocolli di comunicazione IoT, analizzandone origine, diffusione e contesti applicativi;
+\item Esaminare criticamente la sicurezza e la privacy dei sistemi IoT domestici, identificando minacce comuni e soluzioni efficaci;
+\item Valutare le prestazioni e l'affidabilità dei protocolli più diffusi, confrontandoli attraverso indicatori chiave come latenza, consumo energetico e scalabilità;
+\item Analizzare strategie concrete di gestione dell'interoperabilità, mostrando come creare ecosistemi domestici funzionali e scalabili;
+\item Presentare un esempio applicativo basato sull'ecosistema Apple HomeKit, per offrire un riscontro pratico dei concetti teorici trattati.
 \end{itemize}
 
-In sintesi, lo scopo di questo lavoro è offrire una panoramica il più possibile chiara e aggiornata sullo stato della domotica residenziale oggi. Si cercherà di dare risposte pratiche e di aprire una riflessione su come costruire sistemi domestici davvero intelligenti, in cui dispositivi diversi possano finalmente parlare la stessa lingua.
+In sintesi, questa tesi intende fornire una panoramica completa e aggiornata sullo stato attuale della domotica residenziale, offrendo spunti concreti per una gestione efficace e consapevole dei dispositivi intelligenti, in un contesto in cui la tecnologia IoT diventa sempre più centrale nella vita quotidiana.
