--- a/capitoli/cap2.tex
+++ b/capitoli/cap2.tex
@@ -1,18 +1,20 @@
 \chapter{La Domotica Residenziale}
-\section{Definizione e principi fondamentali}
-La domotica residenziale rappresenta l'applicazione delle tecnologie informatiche ed elettroniche alla gestione e automazione dell'abitazione. Essa consente di controllare, anche da remoto, impianti e dispositivi domestici, migliorando la qualità della vita degli utenti \parencite{domoticaWiki}. I principi fondamentali che regolano la domotica includono l'automazione, l'integrazione tra sistemi, la personalizzazione degli ambienti e l'interconnessione tra i dispositivi.
 
-\section{Vantaggi della domotica: efficienza, sicurezza e comfort}
-Tra i principali benefici della domotica si annoverano il miglioramento dell'efficienza energetica, l'incremento della sicurezza domestica e l'aumento del comfort abitativo. Sistemi avanzati permettono, ad esempio, la regolazione automatica dell'illuminazione e della climatizzazione sulla base di parametri ambientali e comportamenti abituali \parencite{iecSmartHome}. Sul piano della sicurezza, l'integrazione di sensori e telecamere consente un monitoraggio continuo e l'attivazione automatica di allarmi in caso di eventi anomali. Il comfort, infine, è garantito dalla possibilità di personalizzare ambienti e scenari mediante dispositivi mobili o assistenti vocali \parencite{domoticaWiki}.
+\section{Definizione e principi fondamentali}
+La domotica residenziale indica l'integrazione delle tecnologie elettroniche e informatiche per automatizzare, controllare e ottimizzare gli impianti e i dispositivi presenti nelle abitazioni. Questo campo applicativo sfrutta in maniera determinante l'Internet of Things (IoT), consentendo agli utenti un controllo sia locale che remoto degli ambienti domestici \parencite{domoticaWiki}. I principi fondamentali della domotica comprendono automazione, integrazione, personalizzazione e interoperabilità, aspetti che sono cruciali per il funzionamento efficace di un sistema intelligente.
+
+\section{Vantaggi della domotica: efficienza energetica, sicurezza e comfort abitativo}
+L'impiego della domotica in contesti residenziali porta numerosi vantaggi, tra cui spiccano l'efficienza energetica, l'aumento della sicurezza e il miglioramento del comfort abitativo. Sistemi intelligenti avanzati permettono, ad esempio, di ottimizzare automaticamente l'illuminazione e la climatizzazione sulla base di parametri ambientali e comportamenti abituali degli utenti, riducendo così significativamente i consumi energetici \parencite{iecSmartHome}. Sul fronte della sicurezza, sensori intelligenti e telecamere integrate consentono una sorveglianza continua, intervenendo autonomamente in caso di emergenze o situazioni anomale \parencite{nistIoTSecurity}. Il comfort è garantito da interfacce intuitive, quali app per dispositivi mobili e assistenti vocali, che rendono semplice e immediata la gestione personalizzata degli ambienti domestici.
 
 \section{Componenti principali di un sistema domotico}
-Un sistema domotico si compone di più elementi che interagiscono tra loro per garantire il funzionamento del sistema nel suo complesso \parencite{iecSmartHome}:
+Un sistema domotico completo ed efficace è composto da diversi elementi essenziali che interagiscono costantemente tra loro \parencite{iecSmartHome}:
 \begin{itemize}
-    \item \textbf{Sensori}: rilevano parametri ambientali come temperatura, umidità, movimento, luminosità, ecc.;
-    \item \textbf{Attuatori}: ricevono comandi e producono azioni fisiche (es. accensione luci);
-    \item \textbf{Unità di controllo}: rappresentano il centro logico del sistema e gestiscono le regole di automazione;
-    \item \textbf{Interfacce utente}: dispositivi o applicazioni che consentono il controllo da parte dell'utente;
-    \item \textbf{Rete di comunicazione}: infrastruttura cablata o wireless per lo scambio di dati.
+    \item \textbf{Sensori intelligenti}: dispositivi in grado di rilevare parametri ambientali (temperatura, umidità, luminosità, movimento), fornendo dati essenziali per le automazioni;
+    \item \textbf{Attuatori}: dispositivi che trasformano i comandi ricevuti in azioni concrete, come l'accensione o lo spegnimento di luci, regolazione di tapparelle o riscaldamento;
+    \item \textbf{Unità centrale di controllo (hub o gateway)}: componente centrale del sistema che gestisce le regole di automazione, interpreta i dati dei sensori e coordina gli attuatori;
+    \item \textbf{Interfacce utente}: comprendono applicazioni mobili, assistenti vocali o pannelli di controllo fisici, permettendo agli utenti di interagire facilmente con il sistema;
+    \item \textbf{Rete di comunicazione}: infrastruttura di rete che collega i dispositivi domotici, solitamente basata su protocolli cablati (es. KNX) o wireless (es. Wi-Fi, Zigbee, Thread o Matter).
 \end{itemize}
 
-
+\section{Sfide aperte nella domotica residenziale}
+Nonostante gli evidenti vantaggi, permangono diverse sfide cruciali per una diffusione più ampia e sostenibile della domotica, tra cui l'interoperabilità tra sistemi multimarca, la sicurezza informatica e l'affidabilità delle soluzioni implementate. Questi temi saranno approfonditi nei capitoli successivi, analizzando nello specifico l'importanza della sicurezza IoT e le prestazioni dei vari protocolli di comunicazione utilizzati nel contesto domestico.
