--- a/glossario.tex
+++ b/glossario.tex
@@ -14,4 +14,8 @@
     \item[Hub] Dispositivo centrale che coordina il traffico e l'automazione dei dispositivi smart.
     \item[CSA] Connectivity Standards Alliance --- Organismo che promuove standard aperti per l'IoT.
     \item[NIST] National Institute of Standards and Technology --- Agenzia USA per standard e tecnologie.
+
+    \item[KNX] Standard aperto per l'automazione degli edifici, utilizzato principalmente in sistemi cablati per applicazioni domotiche.
+    \item[NIST IoT Security] Linee guida e best practice sulla sicurezza IoT definite dal National Institute of Standards and Technology.
+
 \end{description}
