--- a/capitoli/cap7.tex
+++ b/capitoli/cap7.tex
@@ -1,16 +1,23 @@
-\chapter{Conclusioni}
-\section{Riflessioni sull'evoluzione della domotica residenziale}
-La domotica residenziale ha conosciuto una rapida evoluzione, favorita dalla diffusione delle tecnologie dell'Internet of Things (IoT), che ha reso possibile l'automazione intelligente di molteplici aspetti della vita quotidiana. Dalla semplice accensione remota delle luci si è giunti a sistemi complessi in grado di apprendere le abitudini degli utenti e di adattarsi dinamicamente alle condizioni ambientali e comportamentali.
+\chapter{Prospettive Future nella Domotica Residenziale}
+\section{Il ruolo dello standard Matter e dei protocolli basati su IP}
+Matter rappresenta una svolta nel panorama della domotica residenziale: è uno standard aperto sviluppato dalla Connectivity Standards Alliance (CSA) per garantire l'interoperabilità tra dispositivi di produttori diversi. Basato su protocolli IP, Matter consente una comunicazione sicura ed efficiente tra dispositivi domestici smart, eliminando molte delle barriere imposte dai sistemi proprietari. L'adozione su larga scala di Matter potrebbe uniformare il mercato e semplificare le configurazioni per l'utente finale \parencite{matterCSA}.
 
-L'analisi condotta ha evidenziato come lo sviluppo e la diffusione dei protocolli di comunicazione abbiano rappresentato un fattore critico nel garantire l'efficienza e la scalabilità dei sistemi domotici. In particolare, il passaggio da protocolli proprietari a standard aperti come Zigbee, Thread e, più recentemente, Matter, ha aperto nuove possibilità per l'interoperabilità tra dispositivi multimarca.
+\section{Sviluppi tecnologici emergenti}
 
-\section{Impatti dell'interoperabilità sulla diffusione delle smart home}
-La questione dell'interoperabilità è risultata centrale nell'adozione della domotica su larga scala. L'integrazione tra dispositivi di produttori diversi rappresenta una delle sfide principali per la creazione di un ecosistema realmente connesso. L'affermarsi di standard aperti come Matter e l'impegno di grandi attori industriali (Apple, Google, Amazon) nel supportare questi standard hanno segnato un punto di svolta.
+\subsection{Intelligenza artificiale e apprendimento automatico nella smart home}
+L'integrazione dell'intelligenza artificiale (IA) nelle smart home è destinata a rivoluzionare l'automazione domestica. Sistemi basati su IA sono in grado di apprendere le abitudini dell'utente, anticiparne i bisogni e adattare dinamicamente le automazioni in funzione dei comportamenti rilevati. Questo approccio incrementa l'efficienza energetica, la personalizzazione e la sicurezza dei sistemi domotici \parencite{ieeeAI}.
 
-D'altra parte, la presenza di piattaforme proprietarie ha contribuito a sviluppare soluzioni user-friendly, pur mantenendo talvolta limitazioni in termini di compatibilità. Le prospettive future delineano un'ulteriore convergenza tra questi due mondi, supportata da evoluzioni tecnologiche come il Wi-Fi 6, l'intelligenza artificiale applicata alla smart home e le reti mesh.
+\subsection{Reti mesh e Wi-Fi 6}
+Le reti mesh rappresentano una soluzione sempre più diffusa per migliorare la copertura e l'affidabilità delle comunicazioni wireless in ambito domestico. In parallelo, la diffusione del Wi-Fi 6 porta significativi miglioramenti in termini di velocità, efficienza e capacità di gestire un elevato numero di dispositivi contemporaneamente, rendendolo particolarmente adatto a contesti smart home complessi \parencite{etsiWifi6}.
 
-\section{Considerazioni finali}
-L'esempio pratico basato su Apple HomeKit ha dimostrato come, già oggi, sia possibile implementare un impianto domotico efficiente, scalabile e relativamente semplice da gestire, sfruttando dispositivi di produttori diversi. Ciò conferma l'importanza di una progettazione orientata alla compatibilità e di un'attenta selezione degli standard di comunicazione.
+\section{Sfide legate alla privacy e alla sicurezza}
+Con l'aumento dei dispositivi connessi cresce anche il rischio legato alla sicurezza informatica. I sistemi domotici sono potenziali bersagli di attacchi hacker e possono comportare violazioni della privacy. Tra le principali criticità si evidenziano:
+\begin{itemize}
+    \item trasmissione non cifrata di dati sensibili;
+    \item vulnerabilità nei firmware dei dispositivi;
+    \item accessi non autorizzati tramite reti domestiche compromesse.
+\end{itemize}
 
-In conclusione, la domotica residenziale si configura come uno degli ambiti più promettenti dell'IoT. Perché tale potenziale possa realizzarsi pienamente, sarà tuttavia necessario continuare a lavorare su interoperabilità, sicurezza e tutela della privacy. Solo così sarà possibile favorire una diffusione capillare e sostenibile delle smart home.
+Per affrontare tali sfide, sono fondamentali l'adozione di protocolli sicuri, aggiornamenti software regolari, e la consapevolezza dell'utente riguardo le buone pratiche di cybersicurezza \parencite{nistIotSecurity}.
+
 
